@@ -4,38 +4,42 @@
 % Distributed under GPL 2 or later
 
 \name{slotOp}
-\title{Extract or Replace A Slot}
+\title{Extract or Replace a Slot or Property}
 \alias{@}
 \alias{@<-}
 \description{
-  Extract or replace the contents of a slot in a object with a
-  formal (S4) class structure.
+  Extract or replace the contents of a slot or property of an object.
 }
 \usage{
 object@name
 object@name <- value
 }
 \arguments{
-  \item{object}{An object from a formally defined (S4) class.}
-  \item{name}{The character-string name of the slot, quoted or
-      not.  Must be the name of a slot in the definition of the class
-      of \code{object}.}
-  \item{value}{A replacement value for the slot, which must be from a
-      class compatible with the class defined for this slot in the
-      definition of the class of  \code{object}.}
+  \item{object}{An object from a formally defined (S4) class, or an
+    object with a class for which `@` or `@<-` S3 methods are defined.}
+  \item{name}{The name of the slot or property, supplied as a character
+    string or unquoted symbol. If \code{object} has an S4 class, then
+    code{name} must be the name of a slot in the definition of the class
+    of \code{object}.}
+  \item{value}{A suitable replacement value for the slot or
+    property. For and S4 object this must be from a class compatible
+    with the class defined for this slot in the definition of the class
+    of \code{object}.}
 }
 \details{
-  These operators support the formal classes of package \pkg{methods},
-  and are enabled only when package \pkg{methods} is loaded (as per
-  default).  See \code{\link{slot}} for further details, in particular
-  for the differences between \code{slot()} and the \code{@} operator.
+  If \code{object} is not an S4 object, then a suitable S3 method for
+  `@` or `@<-` is searched for. If no method is found, then an error
+  is signaled.
 
-  It is checked that \code{object} is an S4 object (see
-  \code{\link{isS4}}), and it is an error to attempt to use \code{@} on
-  any other object.  (There is an exception for name \code{.Data} for
-  internal use only.)  The replacement operator checks that the slot
-  already exists on the object (which it should if the object is really
-  from the class it claims to be).
+  if \code{object} is an S4 object, then these operators are for slot
+  access, and are enabled only when package \pkg{methods} is loaded (as
+  per default).  The slot must be formally defined. (There is an
+  exception for the name \code{.Data}, intended for internal use only.)
+  The replacement operator checks that the slot already exists on the
+  object (which it should if the object is really from the class it
+  claims to be).  See \code{\link{slot}} for further details, in
+  particular for the differences between \code{slot()} and the \code{@}
+  operator.
 
   These are internal generic operators: see \link{InternalMethods}.
 }
